--- a/css/style.css
+++ b/css/style.css
@@ -120,3 +120,16 @@ body{
 .img-join-us img{
     width: 80%;
 }
+
+/* WORKSHOP */
+
+.host-workshop{
+    width: 100%;
+    height: 625px;
+    background-color: #e5e5e5;
+}
+
+.time-workshop{
+    width: 100%;
+    height: 325px;
+}
